--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     
     <meta name="description" content="">
     
-    <link rel="preload" href="/assets/css/0.styles.346b47ca.css" as="style"><link rel="preload" href="/assets/js/app.122c02d5.js" as="script"><link rel="preload" href="/assets/js/8.f23d7123.js" as="script"><link rel="prefetch" href="/assets/js/10.169953f1.js"><link rel="prefetch" href="/assets/js/2.bee20e09.js"><link rel="prefetch" href="/assets/js/3.2123635f.js"><link rel="prefetch" href="/assets/js/4.523c5d36.js"><link rel="prefetch" href="/assets/js/5.fed72f89.js"><link rel="prefetch" href="/assets/js/6.ee8e2730.js"><link rel="prefetch" href="/assets/js/7.1a58de78.js"><link rel="prefetch" href="/assets/js/9.cb6af65c.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.346b47ca.css">
+    <link rel="preload" href="/vuepress-plugin-text-to-speech/assets/css/0.styles.5a786b5c.css" as="style"><link rel="preload" href="/vuepress-plugin-text-to-speech/assets/js/app.ca09d6bc.js" as="script"><link rel="preload" href="/vuepress-plugin-text-to-speech/assets/js/8.f23d7123.js" as="script"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/10.169953f1.js"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/2.bee20e09.js"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/3.2123635f.js"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/4.523c5d36.js"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/5.6cc0166f.js"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/6.cdfba5b9.js"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/7.1a58de78.js"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/9.cb6af65c.js">
+    <link rel="stylesheet" href="/vuepress-plugin-text-to-speech/assets/css/0.styles.5a786b5c.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/vuepress-plugin-text-to-speech/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.122c02d5.js" defer></script><script src="/assets/js/8.f23d7123.js" defer></script>
+    <script src="/vuepress-plugin-text-to-speech/assets/js/app.ca09d6bc.js" defer></script><script src="/vuepress-plugin-text-to-speech/assets/js/8.f23d7123.js" defer></script>
   </body>
 </html>
