--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
     
     <meta name="description" content="">
     
-    <link rel="preload" href="/vuepress-plugin-text-to-speech/assets/css/0.styles.567d66b6.css" as="style"><link rel="preload" href="/vuepress-plugin-text-to-speech/assets/js/app.574ba701.js" as="script"><link rel="preload" href="/vuepress-plugin-text-to-speech/assets/js/8.f23d7123.js" as="script"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/10.f66c4d3c.js"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/2.bee20e09.js"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/3.2123635f.js"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/4.b10ba2a5.js"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/5.e50630c0.js"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/6.ee8e2730.js"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/7.1a58de78.js"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/9.c4703b88.js">
-    <link rel="stylesheet" href="/vuepress-plugin-text-to-speech/assets/css/0.styles.567d66b6.css">
+    <link rel="preload" href="/vuepress-plugin-text-to-speech/assets/css/0.styles.0506d1bd.css" as="style"><link rel="preload" href="/vuepress-plugin-text-to-speech/assets/js/app.822c829b.js" as="script"><link rel="preload" href="/vuepress-plugin-text-to-speech/assets/js/8.f23d7123.js" as="script"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/10.683dc50f.js"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/2.bee20e09.js"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/3.2123635f.js"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/4.9fecd2d5.js"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/5.7487c1a0.js"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/6.3230b0fc.js"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/7.1a58de78.js"><link rel="prefetch" href="/vuepress-plugin-text-to-speech/assets/js/9.1449146d.js">
+    <link rel="stylesheet" href="/vuepress-plugin-text-to-speech/assets/css/0.styles.0506d1bd.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/vuepress-plugin-text-to-speech/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/vuepress-plugin-text-to-speech/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"></div></div>
-    <script src="/vuepress-plugin-text-to-speech/assets/js/app.574ba701.js" defer></script><script src="/vuepress-plugin-text-to-speech/assets/js/8.f23d7123.js" defer></script>
+    <script src="/vuepress-plugin-text-to-speech/assets/js/app.822c829b.js" defer></script><script src="/vuepress-plugin-text-to-speech/assets/js/8.f23d7123.js" defer></script>
   </body>
 </html>
